tests/ui/deprecations.stderr
error: use of deprecated constant `__pyfunction_pyfunction_option_2::SIGNATURE`: this function has implicit defaults for the trailing `Option<T>` arguments
       = note: these implicit defaults are being phased out
       = help: add `#[pyo3(signature = (_i, _any=None))]` to this function to silence this warning and keep the current behavior
  --> tests/ui/deprecations.rs:15:4
   |
15 | fn pyfunction_option_2(_i: u32, _any: Option<i32>) {}
   |    ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/deprecations.rs:1:9
   |
1  | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated constant `__pyfunction_pyfunction_option_3::SIGNATURE`: this function has implicit defaults for the trailing `Option<T>` arguments
       = note: these implicit defaults are being phased out
       = help: add `#[pyo3(signature = (_i, _any=None, _foo=None))]` to this function to silence this warning and keep the current behavior
  --> tests/ui/deprecations.rs:18:4
   |
18 | fn pyfunction_option_3(_i: u32, _any: Option<i32>, _foo: Option<String>) {}
   |    ^^^^^^^^^^^^^^^^^^^

error: use of deprecated constant `__pyfunction_pyfunction_option_4::SIGNATURE`: this function has implicit defaults for the trailing `Option<T>` arguments
       = note: these implicit defaults are being phased out
       = help: add `#[pyo3(signature = (_i, _any=None, _foo=None))]` to this function to silence this warning and keep the current behavior
  --> tests/ui/deprecations.rs:21:4
   |
21 | fn pyfunction_option_4(
   |    ^^^^^^^^^^^^^^^^^^^

error: use of deprecated constant `SimpleEnumWithoutEq::__pyo3__generated____richcmp__::DEPRECATION`: Implicit equality for simple enums is deprecated. Use `#[pyclass(eq, eq_int)` to keep the current behavior.
  --> tests/ui/deprecations.rs:28:1
   |
28 | #[pyclass]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
